[package]
name = "implot"
version = "0.7.0"
edition = "2018"
authors = ["Sandro Merkli", "implot-rs contributors"]
description = "Rust bindings to https://github.com/epezent/implot"
homepage = "https://github.com/4bb4/implot-rs"
repository = "https://github.com/4bb4/implot-rs"
license = "MIT/Apache-2.0"
categories = ["gui", "api-bindings"]
readme = "README.md"

[dependencies]
implot-sys = { path = "implot-sys" }
imgui = { version = "0.12.0", features = ["docking"] }
parking_lot = "0.11"
rustversion = "1.0.4"

[patch.crates-io]
imgui = { git = "https://github.com/tsurucapital/imgui-rs.git", rev = "83716ca3819d2c20b48533f4354eba663bccf2d3" }
imgui-sys = { git = "https://github.com/tsurucapital/imgui-rs.git", rev = "83716ca3819d2c20b48533f4354eba663bccf2d3" }

[workspace]
members = [ "implot-sys" ]
exclude = [
    "implot-sys-bindgen",
    "implot-examples",
    "implot-wgpu-examples",
]
