[package]
name = "simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = { version = "0.34.0", default-features = false, features = ["glutin_backend"] }
glutin-winit = "0.4.2"
imgui = { version = "0.12.0" }
imgui-glium-renderer = "0.12.0"
imgui-winit-support = "0.12.0"
implot = { version = "0.6.0", path = "../.." }
raw-window-handle = "0.5.2"
winit = { version = "0.29.3", features = ["rwh_05"] }	# This is needed to get window decoration (!?)
