[package]
name = "simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = { version = "0.34.0", default-features = false, features = ["glutin", "simple_window_builder"] }
glutin = { version = "0.31.3" }
glutin-winit = { version = "*" }
imgui = { git = "https://github.com/tsurucapital/imgui-rs.git", rev = "83716ca3819d2c20b48533f4354eba663bccf2d3", features = ["docking"] }
imgui-glium-renderer = { git = "https://github.com/tsurucapital/imgui-rs.git", rev = "83716ca3819d2c20b48533f4354eba663bccf2d3" }
imgui-winit-support = { git = "https://github.com/tsurucapital/imgui-rs.git", rev = "83716ca3819d2c20b48533f4354eba663bccf2d3" }
implot = { path = "../.." }
raw-window-handle = "0.5.2"
winit = { version = "0.29.15", features = ["x11"] }	# This is needed to get window decoration (!?)
