[package]
name = "simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = { version = "0.34.0", default-features = false, features = ["glutin", "simple_window_builder"] }
glutin = { version = "0.31.3" }
glutin-winit = { version = "*" }
imgui = { version = "0.12.0", features = ["docking"] }
imgui-glium-renderer = "0.13.0"
imgui-winit-support = "0.13.0"
implot = { path = "../.." }
raw-window-handle = "0.5.2"
winit = { version = "0.29.15", features = ["x11"] }	# This is needed to get window decoration (!?)
